test/fails/bad_types/vec_mult1.lgl
vec2 v = [2., 3.];
mat3x2 m = [[1., 1.], [1., 1.], [1., 1.]];
print v * m;